@@ -9,6 +9,9 @@ import com.roderly.pesquisaneonatos.neonato.dto.response.NeonatoResponse;
 import com.roderly.pesquisaneonatos.neonato.excel.ExcelHelper;
 import com.roderly.pesquisaneonatos.neonato.mapper.NeonatoMapper;
 import com.roderly.pesquisaneonatos.neonato.repository.NeonatoRepository;
+import com.roderly.pesquisaneonatos.prontuario.dto.projections.ClasseAntimicrobianoCountProjection;
+import com.roderly.pesquisaneonatos.prontuario.dto.projections.EventoCountProjection;
+import com.roderly.pesquisaneonatos.prontuario.dto.response.EventoTipoDiasResponse;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -16,6 +19,7 @@ import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +27,7 @@ public class NeonatoService {
 
     private final NeonatoRepository neonatoRepository;
 
-    public ApiResponseDTO save (NeonatoRequest request) throws IOException {
+    public ApiResponseDTO save(NeonatoRequest request) throws IOException {
         var prontuarioExistente = neonatoRepository.findByProntuario(request.prontuario());
         if (prontuarioExistente.isPresent() && request.idNeonato() == null) {
             return ApiResponseDTO.failure("Número do prontuário já existente!");
@@ -37,13 +41,13 @@ public class NeonatoService {
     }
 
 
-    public NeonatoResponse load (Long id){
+    public NeonatoResponse load(Long id) {
         var neonato = neonatoRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Neonato não encontrado com ID: " + id));
         return NeonatoMapper.convertNeonatoToNeonatoResponse(neonato);
     }
 
 
-    public List<NeonatoListResponse> list (){
+    public List<NeonatoListResponse> list() {
         var neonatoList = neonatoRepository.findAll();
 
         return neonatoList.stream()
@@ -53,22 +57,53 @@ public class NeonatoService {
     }
 
 
-
     public byte[] generateExcelReport() throws IOException {
 
-        var neonatos = neonatoRepository.findAll();
+        var idsNeonatosControle = neonatoRepository.findIdsNeonatosControle();
+        var neonatos = neonatoRepository.findAllById(idsNeonatosControle);
 
-        var neonatoList = neonatos.stream()
-                .map(NeonatoMapper::convertNeonatoToNeonatoReportData)
-                .toList();
+        var neonatosControle = neonatos.stream()
+                .map(neonato -> {
+                    var eventos = neonatoRepository.findEventoCountsByNeonato(neonato.getIdNeonato());
+                    var classesAntimicrobianos = neonatoRepository.findClasseAntimicrobianoCountsByNeonato(neonato.getIdNeonato());
+                    var diasUsoATB = neonatoRepository.getDiasUsoAnimicrobiano(neonato.getIdNeonato(), 1L);
+                    var diasUsoATF = neonatoRepository.getDiasUsoAnimicrobiano(neonato.getIdNeonato(), 2L);
+
+                    return NeonatoMapper.convertToNeonatoGrupoControleReportData(neonato, eventos, diasUsoATB, diasUsoATF, classesAntimicrobianos, this);
+                })
+                .collect(Collectors.toList());
 
         var mappings = ExcelHelper.createColumnMappings();
 
         List<ExcelSheetData<?>> sheetDataList = new ArrayList<>();
-        sheetDataList.add(new ExcelSheetData<>("Neonatos", neonatoList, mappings));
-        sheetDataList.add(new ExcelSheetData<>("Neonatos Teste 2", neonatoList, mappings));
+        sheetDataList.add(new ExcelSheetData<>("Grupo Controle", neonatosControle, mappings));
+        sheetDataList.add(new ExcelSheetData<>("Grupo Infectado", neonatosControle, mappings));
 
         return new ExcelService().generateExcelReport(sheetDataList);
+    }
+
+
+    public EventoTipoDiasResponse getEventoTipoDias(List<EventoCountProjection> eventos, Long tipoEvento) {
+        return eventos.stream()
+                .filter(evento -> evento.getIdTipoEvento().equals(tipoEvento))
+                .findFirst()
+                .map(eventoCountProjection -> new EventoTipoDiasResponse(
+                        1L,
+                        eventoCountProjection.getNEventos()
+                ))
+                .orElseGet(() -> new EventoTipoDiasResponse(0L, 0L));
+    }
+
+
+    public EventoTipoDiasResponse getClasseAnimicrobianoDias(List<ClasseAntimicrobianoCountProjection> antimicrobianos, Long idClasseAntimicrobiano){
+        return antimicrobianos.stream()
+                .filter(evento -> evento.getIdClasseAntimicrobiano().equals(idClasseAntimicrobiano))
+                .findFirst()
+                .map(eventoCountProjection -> new EventoTipoDiasResponse(
+                        1L,
+                        eventoCountProjection.getNEventos()
+                ))
+                .orElseGet(() -> new EventoTipoDiasResponse(0L, 0L));
     }
 
 
